--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,11 @@
       <h3>Basic sql-data-filter demo</h3>
       <demo-snippet>
         <template>
-          <sql-data-filter></sql-data-filter>
+          <sql-data-filter sql="SELECT color FROM data WHERE age!=22" data='
+          [{"username": "Jhon", "color": "red", "age":"22"},
+          {"username": "Charlie", "color": "yellow", "age":"34"},
+          {"username": "Mark", "color": "blue","age":"18"
+        }]'></sql-data-filter>
         </template>
       </demo-snippet>
     </div>
