feat: sententence with condition

--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
       <h3>Basic sql-data-filter demo</h3>
       <demo-snippet>
         <template>
-          <sql-data-filter sql="SELECT color FROM data WHERE age!=22" data='
+          <sql-data-filter sql="SELECT username FROM data WHERE age<22" data='
           [{"username": "Jhon", "color": "red", "age":"22"},
           {"username": "Charlie", "color": "yellow", "age":"34"},
           {"username": "Mark", "color": "blue","age":"18"
